--- a/index.html
+++ b/index.html
@@ -111,18 +111,16 @@
 		<h2 class="w3ls_head">The Clock is Ticking</h2>
 		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
 			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
-			<div class="w3-ab-top">
-				<div class="col-md-4 "></div>
-				<div class="col-md-4 ">
-					<ul id="countdown" class="col-md-3 pull-right"></ul>
-				</div>
-				<div class="col-md-4 "></div>
-				<div class="clearfix"></div>
+		<div class="w3-ab-top">
+			<div class="col-md-4 "></div>
+			<div class="col-md-4 ">
+				<ul id="countdown" class="col-md-3 pull-right"></ul>
 			</div>
+			<div class="col-md-4 "></div>
+			<div class="clearfix"></div>
 		</div>
 	</div>
-	<!-- //Specialize-section -->
-	<!-- news -->
+</div>
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
@@ -177,7 +175,7 @@
 				<h3 class="w3ls_head">Guests</h3>
 					<div class="testi-w3agileinfo"> 
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation" class="active"><a href="#testi" aria-controls="testi" role="tab" data-toggle="tab"><img src="images/jibinJose.png" alt=""/></a></li>
+							<li role="presentation" class="active"><a href="#testi" aria-controls="testi" role="tab" data-toggle="tab"><img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" /></a></li>
 						</ul> 
 						<div class="tab-content">
 							<div role="tabpanel" class="tab-pane active" id="testi">
@@ -185,115 +183,101 @@
 								<h4>CEO &amp; Co-Founder at Flipmotion, Inc (RideBlock)</h4>
 								<p><q><i>I'm passionate about technology and like to work in the field of connected devices and the internet of things. Flipmotion focus on building connected devices to enhance the sporting experience. We provide hardware and the enabling software to work together to produce the best result.</i></q></p>
 							</div>
-							<!-- <div role="tabpanel" class="tab-pane" id="profile">
-								<h5>ULLAMCORPER FILAN </h5>
-								<p>Scelerisque ac augue id Donec libero dui, , tristique ullamcorper elit. Nam ultrices, lacus vitae adipiscing aliquet, metus ipsum imperdiet libero, vitae dignissim sapien diam ac nibh convallis.</p>
-							</div>
-							<div role="tabpanel" class="tab-pane" id="messages"> 
-								<h5>SCELERISQUE AUGUE</h5>
-								<p>Nam ultrices lacus vitae adipiscing aliquet, metus ipsum imperdiet libero, vitae dignissim sapientristique Donec libero dui, scelerisque ac augue id,  ullamcorper elit,diam ac nibh convallis.</p>
-							</div> -->
 						</div> 
 					</div>
 				</div>
 			</div>
-			<!-- //testimonials -->
-			
-				<div class="w3-agile-footer">
-					<div class="container">
-						<div class="footer-grids">
-							<div class="agileits-w3layouts-copyright">
-								<p>© Bodhi 10.0 </p>
-							</div>
+			<div class="w3-agile-footer">
+				<div class="container">
+					<div class="footer-grids">
+						<div class="agileits-w3layouts-copyright">
+							<p>© Bodhi 10.0 </p>
 						</div>
 					</div>
-					<!-- //footer -->
-					<!-- bootstrap-pop-up -->
-					<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									Vocal Edge
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
-								</div>
-								<section>
-									<div class="modal-body">
-										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p><ul>
-											<li>Entry till August 5pm.</li>
-											<li>Judgement will be based on the maximum number of likes and shares along with the quality of the song.</li>
-											<li>Final decision will be up the judging panel.</li>
-											<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
-											<li>Your entries can be send along with the smule link <a href="http://bit.do/vocaledge" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
-											<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
-										</ul>
-											<i>"Music is the art of thinking with sounds. Explore your music and express it to win this contest."</i></p>
-											</div>
-										</section>
-									</div>
-								</div>
+				</div>
+			</div>
+				<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								Vocal Edge
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
-							<div class="modal video-modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModal1">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									Swivel
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							<section>
+								<div class="modal-body">
+									<img src="images/smule.png" alt=" " class="img-responsive" />
+									<p><ul>
+										<li>Entry till August 5pm.</li>
+										<li>Judgement will be based on the maximum number of likes and shares along with the quality of the song.</li>
+										<li>Final decision will be up the judging panel.</li>
+										<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
+										<li>Your entries can be send along with the smule link <a href="http://bit.do/vocaledge" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
+										<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
+									</ul>
+										<i>"Music is the art of thinking with sounds. Explore your music and express it to win this contest."</i></p>
 								</div>
-								<section>
-									<div class="modal-body">
-										<img src="images/boomerang.png" alt=" " class="img-responsive" />
-										<p><ul>
-											<li>Entry till August 5pm.</li>
-											<li>Judgement will be based on the maximum number of likes and shares.</li>
-											<li>Final decision will be up the judging panel.</li>
-											<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
-											<li>Your entries can be send along with the smule link <a href="http://bit.do/SWIVEL" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
-											<li>When you are filling the details, make sure that <b>the particpant name and the file name should be the same</b>.</li>
-											<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
-										</ul>
-											<i>"Boomerang makes everyday moments fun and unexpected. Create captivating mini-videos that loop back and forth and grab exciting prizes."</i></p>
-											</div>
-										</section>
-									</div>
-								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModal1">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								Swivel
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
-							<div class="modal video-modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModal2">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									AeroTrac
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							<section>
+								<div class="modal-body">
+									<img src="images/boomerang.png" alt=" " class="img-responsive" />
+									<p><ul>
+										<li>Entry till August 5pm.</li>
+										<li>Judgement will be based on the maximum number of likes and shares.</li>
+										<li>Final decision will be up the judging panel.</li>
+										<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
+										<li>Your entries can be send along with the smule link <a href="http://bit.do/SWIVEL" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
+										<li>When you are filling the details, make sure that <b>the particpant name and the file name should be the same</b>.</li>
+										<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
+									</ul>
+										<i>"Boomerang makes everyday moments fun and unexpected. Create captivating mini-videos that loop back and forth and grab exciting prizes."</i></p>
 								</div>
-								<section>
-									<div class="modal-body">
-										<img src="images/drone.jpg" alt=" " class="img-responsive" />
-										<p><ul>
-											<li>Entry till August 5pm.</li>
-											<li>Judgement will be based on the maximum number of likes and shares.</li>
-											<li>Final decision will be up the judging panel.</li>
-											<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
-											<li>Your entries can be send along with the smule link <a href="http://bit.do/SWIVEL" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
-											<li>When you are filling the details, make sure that <b>the particpant name and the file name should be the same</b>.</li>
-											<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
-										</ul>
-											<i>"Let's Take it to air!"</i></p>
-											</div>
-										</section>
-									</div>
-								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModal2">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								AeroTrac
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
-							<!-- //bootstrap-pop-up -->
-
-							<script src="js/jarallax.js"></script>
-							<script src="js/SmoothScroll.min.js"></script>
-							<script type="text/javascript">
-								/* init Jarallax */
-								$('.jarallax').jarallax({
-									speed: 0.5,
-									imgWidth: 1366,
-									imgHeight: 768
-								})
-							</script>
-						</body>	
-						</html>
+							<section>
+								<div class="modal-body">
+									<img src="images/drone.jpg" alt=" " class="img-responsive" />
+									<p><ul>
+										<li>Entry till August 5pm.</li>
+										<li>Judgement will be based on the maximum number of likes and shares.</li>
+										<li>Final decision will be up the judging panel.</li>
+										<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
+										<li>Your entries can be send along with the smule link <a href="http://bit.do/SWIVEL" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
+										<li>When you are filling the details, make sure that <b>the particpant name and the file name should be the same</b>.</li>
+										<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
+									</ul>
+										<i>"Let's Take it to air!"</i></p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<script src="js/jarallax.js"></script>
+				<script src="js/SmoothScroll.min.js"></script>
+				<script type="text/javascript">
+					$('.jarallax').jarallax({
+						speed: 0.5,
+						imgWidth: 1366,
+						imgHeight: 768
+						})
+				</script>
+			</body>	
+		</html>
