--- a/www/events.html
+++ b/www/events.html
@@ -487,7 +487,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- Shastrapatra -->
+					<!-- Excaver -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -495,7 +495,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">Shastrapatra</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Excaver</a></h4>
 								</div>
 							</div>
 						</div>
@@ -504,19 +504,19 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									Shastrapatra
+									Excaver
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>STAFF CO-ORDINATOR: MRS.RANJINI SURENDRAN (9961516990)<br>STUDENT CO-ORDINATORS: PAUL JOSEPH (9497608728) (S7 EC A)<br>RADHIKA V NAIR (8589879329) (S7 EC B)<br>PRIZE MONEY: FIRST-Rs.3000, SECOND Rs-2000, THIRD-Rs.1000<br>TIME: 10 AM TO 4 PM<br>VENUE: M-TECH SEMINAR HALL</p>
+										<p>Excaver (DAY 2)<br>STUDENT CO-ORDINATORS: Rose Mariya George (9400822598)<br>Merin Mathew (9495485431)<br>PRIZE MONEY: Rs. 2000<br>200 per group of 2<br>VENUE: 1. D-406 <br>2. D-408 Civil Dept. Computer Lab</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- MOSFEST -->
+					<!-- Creativita -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -524,7 +524,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">MOSFEST</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Creativita</a></h4>
 								</div>
 							</div>
 						</div>
@@ -533,19 +533,33 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									MOSFEST- FUN WITH ELECTRONICS
+									Creativita
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>MOSFEST- FUN WITH ELECTRONICS (DAY 1)<br>STAFF CO-ORDINATOR: MR.JIBBY PETER DCRUZ (960585308)<br>STUDENT CO-ORDINATORS: GOKUL M KARTHA (9526234950) (S7 EC A)<br>VARGHESE BENNY (8086967146) (S7 EC B)<br>PRIZE MONEY: Rs.2000<br>TIME: 10.30 AM ONWARDS<br>VENUE: ENTRANCE BELOW B-BLOCK</p>
+										<p>Creativita (DAY 1)<br>
+										<ul>
+											<li>Prizes worth 3K (First Prize: 2K and Second Prize: 1K)</li>
+											<li>College ID card is compulsory for registration and certificate</li>
+											<li>Opportunity for under graduates to score 50 activity points as per KTU curriculum (40 activity points awarded for participation and 50 activity points awarded for winning any national level technical festival)</li>
+											<li>Last date for registration is 24 August, 2017</li>
+											<li>Registration fees: ₹200 per team of 5 members (A team can have a maximum of 7 members; additional participant will be eligible to get certificate on payment of Rs. 100 per person as registration)</li>
+											<li>Models may be restricted to a size of 150 cm X 80 cm</li>
+											<li>Models can be explained through additional posters/videos/presentation</li>
+											<li>Models can be either conceptual or existing (sky scrapers, moving bridges(etc.)</li>
+											<li>Models may be made from the following materials - (Thermocol, cardboard, mount board, balsa wood, or any other suitable material)</li>
+											<li>Models must be brought to the venue (CIVIL LAB BLOCK) on 25 August, 2017 at 10 AM</li>
+											<li>Judgement will be on 26 August 2017 and judges’ decision will be final</li>
+										</ul>
+										<br>STUDENT CO-ORDINATORS: Roji P Raju (9633312778)<br>Aleena Paul (9447193271)<br>PRIZE MONEY: FIRST: Rs.2000 SECOND: Rs. 1000<br>200 per group of 4<br>VENUE: Civil Lab Block</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- KALASHASTRA -->
+					<!-- Innovace -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -553,7 +567,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">KALASHASTRA</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Innovace</a></h4>
 								</div>
 							</div>
 						</div>
@@ -562,19 +576,33 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									KALASHASTRA -HOBBY CIRCUIT EXHIBITION
+									Innovace
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>KALASHASTRA -HOBBY CIRCUIT EXHIBITION(DAY 1) (ONLY FOR VJCET)<br>STAFF CO-ORDINATOR: MRS.ROSE MARY KURUVITHADAM (9745188808)<br>STUDENT CO-ORDINATORS: ALGIN GEORGE (9847574865) (S7 EC B)<br>SHRUTHI K REGI (9061575419) (S7 EC B)<br>PRIZE MONEY: FIRST- Rs.2500, SECOND-Rs.1500, THIRD-Rs.1000<br>TIME: 10 AM TO 4 PM<br>VENUE: IC LAB</p>
+										<p>Innovace<br>
+										<ul>
+											<li>Prizes worth 4K (First Prize: 3K and Second Prize: 1K)</li>
+											<li>College ID card is compulsory for registration and certificate</li>
+											<li>Opportunity for under graduates to score 50 activity points as per KTU curriculum (40 activity points awarded for participation and 50 activity points awarded for winning any national level technical festival)</li>
+											<li>Last date for registration is 24 August, 2017</li>
+											<li>Registration fees: ₹200 per team of 4 members (A team can have a maximum of 7 members; additional participant will be eligible to get certificate on payment of Rs. 100 per person as registration)</li>
+											<li>Models may be restricted to a size of 150 cm X 80 cm</li>
+											<li>Models can be explained through additional posters/videos/presentation</li>
+											<li>Models can be either conceptual or existing (sky scrapers, moving bridges etc.)</li>
+											<li>Models may be made from the following materials - (Thermocol, cardboard, mount board, balsa wood, or any other suitable material)</li>
+											<li>Models must be brought to the venue (CIVIL LAB BLOCK) on 25 August, 2017 at 10 AM</li>
+											<li>Judgement will be on 26 August 2017 and judges’ decision will be final</li>
+										</ul>
+										<br>STUDENT CO-ORDINATORS: Emmanuel Jose (8078468505)<br>Mareena Markose (9446063459)<br>PRIZE MONEY: FIRST- Rs.3000, SECOND-Rs.1000<br>200 per group of 4<br>VENUE: Civil Lab Block</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- OSCILLO ART -->
+					<!-- Expendables -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -582,7 +610,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">OSCILLO ART</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Expendables</a></h4>
 								</div>
 							</div>
 						</div>
@@ -591,19 +619,33 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									OSCILLO ART–OSCILLOSCOPE ART
+									Expendables
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>OSCILLO ART–OSCILLOSCOPE ART (DAY 2)<br>STAFF CO-ORDINATOR: MRS.PRIYA G L (9496803291)<br>STUDENT CO-ORDINATORS: GLEN P YELDHO (9747071989) (S7 EC A)<br>CHINCHU ELDHOS (7034355297) (S7 EC A)<br>PRIZE MONEY: FIRST-Rs.3000, SECOND-Rs.2000, THIRD-Rs.1000<br>PRELIMS: 10 AM TO 11 AM<br>FINALS: 11:30 AM TO 1:30 PM<br>VENUE: CIRCUITS 1 &amp; 2 LAB</p>
+										<p>Expendables (DAY 2)<br>RULES
+										<ul>
+											<li>Each TEAM consists of THREE members.</li>
+											<li>Registration Fees :Rs 200 per team.</li>
+											<li>The Game Event is divided into 3 ROUND EACH CONSISTING OF ITS OWN BATTLE GROUNDS.</li>
+											<li>Each BATTLE GROUND will have credits awarded to the teams.</li>
+											<li>The team with maximum credits will pass on to the next round.</li>
+											<li>Elimination of bottom teams will be held after the first and second rounds.</li>
+											<li>Decision of the event in charge will be final.</li>FIRST ROUND
+											<li>The back bencher and logical skills will be tested.</li>
+											SECOND ROUND
+											<li>The logical and improvisation skills will be tested to its limits</li>THIRD ROUND
+											<li>The innovative and team dynamics skills will be tested.</li>
+										</ul>
+										<br>STUDENT CO-ORDINATORS: Ajay Balan (9400257193)<br>Marshal Tomy (8281975997)<br>PRIZE MONEY: Rs.5000<br>200 per group of 3<br>VENUE: D-307, D-308, D-309</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- PRASHNOTHARA -->
+					<!-- Tutankhamun -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -611,7 +653,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">PRASHNOTHARA</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Tutankhamun</a></h4>
 								</div>
 							</div>
 						</div>
@@ -620,19 +662,19 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									PRASHNOTHARA - TECHNICAL QUIZ
+									Tutankhamun
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>PRASHNOTHARA - TECHNICAL QUIZ (DAY 2)<br>STAFF CO-ORDINATOR: MRS.MERLIN THOMAS (9446741339)<br>STUDENT CO-ORDINATORS: VANI VAVACHAN (9207128164) (S3 EC B)<br>SRUTHY JAYACHANDRAN (9400038812) (S3 EC A)<br>PRIZE MONEY: FIRST-Rs. 3000, SECOND-Rs.2000, THIRD-Rs.1000<br>PRELIMS: 11:30 AM TO 12:30 PM<br>FINALS: 1:30 PM TO 3:30 PM<br>VENUE: PTC SEMINAR HALL</p>
+										<p>Tutankhamun<br>STUDENT CO-ORDINATORS: Ajith P Shaji (7558808983)<br>Clint Thankachan (7025727383)<br>Ajith P S (8138818257)<br>VENUE: Civil Lab Block</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- PRAKALPA -->
+					<!-- Galleria -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -640,7 +682,7 @@
 									<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/s1.jpg" width="100" height="150" class="example-image-link" alt=""/></a>
 								</div>
 								<div class="news-w3imgtext">
-									<h4><a href="#" data-toggle="modal" data-target="#myModal">PRAKALPA</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#myModal">Galleria</a></h4>
 								</div>
 							</div>
 						</div>
@@ -649,13 +691,39 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									PRAKALPA-MINI PROJECT EXHIBITION
+									Galleria
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
 										<img src="images/smule.png" alt=" " class="img-responsive" />
-										<p>PRAKALPA-MINI PROJECT EXHIBITION (DAY 1)<br>STAFF CO-ORDINATOR: CUCKOO ANITHA JOSEPH (9446393497)<br>STUDENT CO-ORDINATORS: ALISHA MARIAM CHACKO (8593817109) (S5 EC A)<br>SNEHA TRESA JOYSON (8113970906) (S5 EC A)<br>PRIZE MONEY: FIRST-Rs.4000, SECOND-Rs.3000, THIRD-Rs.1000<br>TIME: 10 AM TO 4 PM<br>VENUE: CIRCUITS 1 &amp; 2 LAB</p>
+										<p>Galleria<br>RULES:<br>
+										<ul>
+											<li>Best Poster Award will be given or the best project.</li>
+											<li>Full length paper should be in IEEE format and maximum of 7 pages</li>
+											<li>Selected papers will be published in recognized journal with ISBN</li>
+											<li>Last date for submission of abstract is 24 August, 2017</li>
+											<li>All papers will undergo a peer-review process by the review committee</li>
+											<li>Registration fees: ₹100 per team</li>
+											<li>Papers should be sent to <b>civil.bodhi@gmail.com</b></li>
+											The topics for poster presentation may include (and not limited to)
+											<li>Structural Engineering</li>
+											<li>Ocean &amp; Offshore Engineering</li>
+											<li>Water Resource Engineering</li>
+											<li>Geotechnical Engineering</li>
+											<li>Environmental Engineering</li>
+											<li>Transportation Engineering</li>
+											<li>Construction Technology &amp; Management</li>
+											<li>Modern Construction Materials and Practices</li>
+											<li>Application of Remote Sensing and GIS</li>
+											<li>Earthquake Resistant Structures</li>
+											<li>Urban Planning &amp; Architecture</li>
+											<li>Disaster Management</li>
+											<li>Sustainable Engineering &amp; Green Building</li>
+											<li>Computing &amp; Numerical methods in Civil Engineering</li>
+											<li>Innovations in Civil Engineering</li>
+											</ul>
+											<br>STUDENT CO-ORDINATORS: Alishaban Nazar (9446885157)<br>Gifty George (9995621125)<br><br>100 per team<br>VENUE: Geotechnical Lab</p>
 									</div>
 								</section>
 							</div>
