--- a/www/index.html
+++ b/www/index.html
@@ -165,7 +165,7 @@
 					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/drone.jpg" class="img-responsive zoom-img" alt=""/></a>
+								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/landscape.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
@@ -177,7 +177,7 @@
 					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/drone.jpg" class="img-responsive zoom-img" alt=""/></a>
+								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
