Added two general events

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 						rest <= 0 ? days = hours = minutes = seconds = '00' : setTimeout(countdown, 1000);
 
 						document.getElementById('countdown').innerHTML =
-						'<li><div><span>' + days +'</span>day' + (days > 1 ? 's' : '') +'</div></li>'
-						+'<li><div><span>' + hours +'</span>hour' + (hours > 1 ? 's' : '') +'</div></li>'
-						+'<li><div><span>' + minutes +'</span>minute' + (minutes > 1 ? 's' : '') +'</div></li>'
-						+'<li><div><span>' + seconds +'</span>second' + (seconds > 1 ? 's' : '') +'</div></li>';
+						'<li><div><span>' + days +'</span>DAY' + (days > 1 ? 'S' : '') +'</div></li>'
+						+'<li><div><span>' + hours +'</span>HOUR' + (hours > 1 ? 'S' : '') +'</div></li>'
+						+'<li><div><span>' + minutes +'</span>MINUTE' + (minutes > 1 ? 'S' : '') +'</div></li>'
+						+'<li><div><span>' + seconds +'</span>SECOND' + (seconds > 1 ? 'S' : '') +'</div></li>';
 					})();
 				</script>
 				<!-- flexSlider -->
@@ -111,6 +111,8 @@
 		<h2 class="w3ls_head">The Clock is Ticking</h2>
 		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
 			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
+		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
+			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
 		<div class="w3-ab-top">
 			<div class="col-md-4 "></div>
 			<div class="col-md-4 ">
@@ -119,6 +121,14 @@
 			<div class="col-md-4 "></div>
 			<div class="clearfix"></div>
 		</div>
+		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
+			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
+
+		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
+			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
+
+		<p class="para"><span style="color: white;">Lorem Ipsum is simply dummy text type setting industry esse cillum dolore eu 
+			fugiat nulla pariatur. Excepteur sint occaecat.</span></p>
 	</div>
 </div>
 	<div class="services news">
@@ -128,7 +138,7 @@
 				<p class="para">Tighten up 'coz its your chance to win<span> amazing prizes</span> for the events below. Hurry Up and Register to win...!!!</p>			
 				</div>
 				<div class="news-agileinfo">
-					<div class="col-sm-4 news-w3lgrids">
+					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/smule.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
@@ -140,7 +150,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-4 news-w3lgrids">
+					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal1"><img src="images/boomerang.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
@@ -152,10 +162,22 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-4 news-w3lgrids">
+					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/drone.jpg" class="img-responsive zoom-img" alt=""/></a>
+								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/landscape.png" class="img-responsive zoom-img" alt=""/></a>
+							</div>
+							<div class="news-w3imgtext">
+								<h5 class="w3-agilep">Register Now</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal2">Last Date: 20th August 2017</a></h4> 
+								<p>Morbi a vehicula risus, vitae interdum orci Praesent acelei turpis. Morbi a vehicula risus</p> 
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 news-w3lgrids">
+						<div class="news-gridtext">
+							<div class="news-w3img">
+								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
